[project]
name = "hackathon-1-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "Cristopher Pinzon",email = "cristopher.pinzon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3 (>=1.38.15,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

